--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
     "@types/pg": "^8.16.0",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.8",
     "eslint": "^9.39.2",
     "prettier": "^3.8.1",
     "prisma": "^7.4.0",
