--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "db:migrate:dev": "prisma migrate dev",
     "db:migrate:prod": "prisma migrate deploy",
     "db:push": "prisma db push",
-    "db:seed": "node prisma/seed.ts",
+    "db:seed": "node --env-file=.env prisma/seed.ts",
     "db:studio": "prisma studio"
   },
   "dependencies": {
