--- a/package.json
+++ b/package.json
@@ -6,19 +6,19 @@
     "node": ">=24.0.0"
   },
   "scripts": {
-    "dev": "node --watch src/index.ts",
+    "dev": "node --env-file=.env --watch src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
     "typecheck": "tsc --noEmit",
-    "test": "DOTENV_CONFIG_PATH=.env.test node --test tests/**/*.test.ts",
-    "test:watch": "DOTENV_CONFIG_PATH=.env.test node --test --watch tests/**/*.test.ts",
+    "test": "node --env-file=.env.test --test tests/**/*.test.ts",
+    "test:watch": "node --env-file=.env.test --test --watch tests/**/*.test.ts",
     "lint": "eslint src/ tests/",
     "format": "prettier --write \"src/**/*.ts\" \"tests/**/*.ts\"",
     "db:generate": "prisma generate",
     "db:migrate:dev": "prisma migrate dev",
     "db:migrate:prod": "prisma migrate deploy",
     "db:push": "prisma db push",
-    "db:seed": "node prisma/seed.ts",
+    "db:seed": "node --env-file=.env prisma/seed.ts",
     "db:studio": "prisma studio"
   },
   "dependencies": {
@@ -26,7 +26,6 @@
     "@prisma/client": "^7.4.0",
     "argon2": "^0.44.0",
     "cors": "^2.8.6",
-    "dotenv": "^17.3.1",
     "express": "^5.2.1",
     "express-rate-limit": "^8.2.1",
     "helmet": "^8.1.0",
